# kpmcore

src/fs/: CMakeLists.txt  filesystem.cpp  filesystem.h  filesystemfactory.cpp  freebsdswap.cpp  freebsdswap.h  ntfs.cpp  ntfs.h
src/plugins/: CMakeLists.txt
src/plugins/gpart/: gpartbackend.cpp  gpartdevice.cpp  gpartdevice.h  gpartpartitiontable.cpp
src/util/: externalcommand_whitelist.h
test/: CMakeLists.txt
